content/terraform-enterprise/2.0.x/docs/enterprise/saml/configuration.mdx
---
page_title: Configure Terraform Enterprise as the SAML service provider
description: >-
  Learn how to configure Terraform Enterprise as the service provider (SP) when integrating with a SAML identity provider for authentication and authorization. 
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-02T17:54:50Z
last_modified: 2026-02-02T17:54:50Z
# END AUTO GENERATED METADATA
---

# Configure Terraform Enterprise as the SAML service provider

This topic describes how to configure Terraform Enterprise as the SAML service provider (SP). SAML is an XML-based standard for authentication and authorization. Terraform Enterprise can act as a service provider (SP), also called a relying party, with your internal SAML identity provider (IdP).

## Overview

Complete the following steps to configure Terraform Enterprise to authenticate and authorize users with SAML.

When Terraform Enterprise is configured to [provision users through SCIM](/terraform/enterprise/scim), SAML is used only for authentication. Terraform Enterprise ignores team membership from SAML assertions, does not use SAML site-admin settings for site administrator provisioning, and requires users to already be provisioned through SCIM before they can authenticate with SAML.

1. Configure Terraform Enterprise as the service provider (SP). The SP is also sometimes referred to as a relying party (RP).
1. Configure the SAML identity provider (IdP). For instructions for specific IdPs, refer to [Identity Provider Configuration](/terraform/enterprise/saml/idp-configuration).

Refer to the [Admin Settings API](/terraform/enterprise/api-docs/admin/settings) documentation for instructions on how to configure SAML using the API.

## Requirements

Only Terraform Enterprise users with the site-admin permission can modify SAML settings. For more information about site admins, refer to [Site Administration Permissions](/terraform/enterprise/users-teams-organizations/users#site-admin-permissions).

Prior to activating SAML, we recommend that you create a [non-SSO admin account for recovery](/terraform/enterprise/saml/troubleshooting#create-a-non-sso-admin-account-for-recovery) to ensure that you are able to log in as an admin in case of error.

Terraform Enterprise supports the SAML 2.0 standard. 

## Configure Terraform Enterprise as the SP

1. Open your user icon menu and click **Site Admin** or go directly to `https://<TFE HOSTNAME>/app/admin/saml`.
1. Specify values for the SAML settings and click **Save SAML Settings**. Refer to [SAML Configuration Settings Reference](#saml-configuration-settings-reference) for details.

## Configure the SAML Identity Provider

Configure the following values in the SAML Identity Provider (IdP):

1. **Audience**: `https://<TFE HOSTNAME>/users/saml/metadata`
1. **Recipient**: `https://<TFE HOSTNAME>/users/saml/auth`
1. **ACS (Consumer) URL**: `https://<TFE HOSTNAME>/users/saml/auth`

The SAML metadata document is available at `https://<TFE HOSTNAME>/users/saml/metadata.xml`

## SAML Configuration Settings Reference

You can configure the following settings to configure Terraform Enterprise as the SP when integrating with a SAML identity provider.

### SAML Settings

- **Enable SAML single sign-on**: This checkbox must be enabled.

### Identity Provider Settings

- **Single Sign-On URL**: The HTTP(S) endpoint on your IdP for single sign-on requests. This value is provided by your IdP configuration.
- **Single Log-Out URL**: The HTTP(s) endpoint on your IdP for single logout requests. This value is provided by your IdP configuration. Single Logout is not yet supported.
- **IdP Certificate**: The PEM encoded X.509 Certificate as provided by the IdP configuration.

-> **Note:** When reconfiguring the IdP certificate, Terraform Enterprise will retain the old IdP certificate to allow for a rotation period. When you are sure that the new certificate is functioning correctly, you must explicitly remove the old IdP certificate. A button labeled "Revoke old IDP certificate" will appear below the IdP Certificate field if you are in a rotation period. You can also remove the old certificate via an [API endpoint](/terraform/enterprise/api-docs/admin/settings#revoke-previous-saml-idp-certificate).

### Attributes

- **Username Attribute Name**: (default: `Username`) The name of the SAML attribute that determines the Terraform Enterprise username for a user logging in via SSO.
- **Site Admin Attribute Name**: (default: `SiteAdmin`) The name of the SAML attribute that determines whether a user has site-admin permissions. The value of this attribute in the SAML assertion must be a boolean. Site admins can manage settings and resources for the entire Terraform Enterprise instance; see [Administering Terraform Enterprise][admin] for details. Terraform Enterprise ignores this setting when SCIM is enabled.
- **Team Attribute Name**: (default: `MemberOf`) The name of the SAML attribute that determines [team membership](/terraform/enterprise/saml/team-membership). The value of this attribute in the SAML assertion must be either a string containing a comma-separated list of team names or separate [AttributeValue items](/terraform/enterprise/saml/attributes#memberof). Team membership mapping is case-sensitive. Terraform Enterprise ignores this attribute when SCIM is enabled.

### Team Membership Mapping

When [SCIM provisioning](/terraform/enterprise/scim) is enabled, Terraform Enterprise ignores team membership from SAML assertions. SCIM takes precedence for team membership management. Refer to [Link SCIM groups to teams](/terraform/enterprise/scim/manage/team-mapping) for more information.

- **Site Admin Role**: (default: `site-admins`; make blank to disable) An alternate way to manage site administrator access when SCIM is not enabled. If a role with this name is present in the value of the **Team Attribute Name** attribute, Terraform Enterprise grants site administrator access to that user. Terraform Enterprise ignores this setting when SCIM is enabled.

  We recommend using the "site admin attribute name" setting instead. If you are using the site admin attribute, you can disable "site admin role" by deleting its value.

### User Session

- **API Token Session Timeout**: (default: `1209600` seconds, or 14 days) The duration in seconds that Terraform Enterprise accepts [a user's API token](/terraform/enterprise/users-teams-organizations/users#api-tokens) before requiring the user to log in again. For more details about this behavior, refer to [API Token Expiration](/terraform/enterprise/saml/login#api-token-expiration).
